# friday

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  justfile  package.json
apps/friday-desktop/: .gitignore
apps/friday-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/friday-desktop/src-tauri/capabilities/: default.json
apps/friday-desktop/src-tauri/src/: lib.rs  main.rs
crates/friday-core/: Cargo.toml  README.md
crates/friday-core/src/: agents.rs  canvas.rs  lib.rs  terminal.rs
crates/friday-mcp/: README.md
crates/friday-memory/: .gitignore  README.md
docs/: README.md
presets/friday-agents/: README.md
scripts/: trace-gate.sh
